--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   animated_toggle_switch: ^0.8.0
+  dio: ^5.4.0
   
 
 dev_dependencies:
