--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   animated_toggle_switch: ^0.8.0
   dio: ^5.4.0
+  vocsy_epub_viewer: ^2.0.0
+  flutter_file_downloader: ^1.2.0
+  path_provider: ^2.1.1
+  flutter_downloader: ^1.11.5
   
 
 dev_dependencies:
@@ -64,6 +68,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/epubs/
+
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
